Brings look and feel more in-line with 8shapes recommendations

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/button/Button.scss
@@ -415,11 +415,11 @@ $button-header-toolbar-glyph-opacity: 1 !default;
   $font-size-pressed: $button-medium-font-size-pressed,
   $font-size-disabled: $button-medium-font-size-disabled,
 
-  $font-weight: $button-medium-font-weight,
-  $font-weight-over: $button-medium-font-weight-over,
-  $font-weight-focus: $button-medium-font-weight-focus,
-  $font-weight-pressed: $button-medium-font-weight-pressed,
-  $font-weight-disabled: $button-medium-font-weight-disabled,
+  $font-weight: normal,
+  $font-weight-over: normal,
+  $font-weight-focus: normal,
+  $font-weight-pressed: normal,
+  $font-weight-disabled: normal,
 
   $font-family: $button-medium-font-family,
   $font-family-over: $button-medium-font-family-over,
@@ -491,11 +491,11 @@ $button-headermode-toolbar-glyph-opacity: 1 !default;
   $font-size-pressed: $button-medium-font-size-pressed,
   $font-size-disabled: $button-medium-font-size-disabled,
 
-  $font-weight: $button-medium-font-weight,
-  $font-weight-over: $button-medium-font-weight-over,
-  $font-weight-focus: $button-medium-font-weight-focus,
-  $font-weight-pressed: $button-medium-font-weight-pressed,
-  $font-weight-disabled: $button-medium-font-weight-disabled,
+  $font-weight: normal,
+  $font-weight-over: normal,
+  $font-weight-focus: normal,
+  $font-weight-pressed: normal,
+  $font-weight-disabled: normal,
 
   $font-family: $button-medium-font-family,
   $font-family-over: $button-medium-font-family-over,
