--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
@@ -6,8 +6,4 @@
 $base-color: #444444 !default;
 
 // Use the same font-family for everything
-$font-family: proxima_nova_rgregular, 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
-
-html {
-  -webkit-font-smoothing: antialiased !important;
-}
+$font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
