--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Trigger.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Trigger.scss
@@ -1,12 +1,17 @@
-.x-form-trigger-wrap {
+/**
+ * @class Ext.form.field.Trigger
+ */
+
+.quicksearch .x-form-trigger-wrap {
   border-radius: 11px;
   padding-left: 3px;
   padding-right: 0px;
   background-color: white;
-}
 
-.x-trigger-cell,
-.x-form-field,
-.x-form-trigger-input-cell {
-  background-color: rgba(0, 0, 0, 0);
+  input.x-form-field,
+  .x-trigger-cell,
+  .x-form-trigger,
+  .x-form-trigger-input-cell {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
