Simplify, re-use ui generated cls

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -41,10 +41,7 @@
   $ui-wrap-border-color: #888888
 );
 
-/**
- * cls: 'feature-menu'
- */
-.feature-menu {
+.x-panel-body-feature-menu {
   .x-grid-cell {
     background-color: #f1f1f1;
   }
