--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -3489,12 +3489,12 @@
   background-color: #f1f1f1;
 }
 /* line 48, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
-.x-panel-body-feature-menu .x-grid-row-selected .x-grid-cell {
-  background-color: #CDCDCD;
+.x-panel-body-feature-menu .x-grid-row-over .x-grid-td {
+  background-color: #e1e1e1;
 }
 /* line 51, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
-.x-panel-body-feature-menu .x-grid-row-over .x-grid-cell {
-  background-color: #e1e1e1;
+.x-panel-body-feature-menu .x-grid-row-selected .x-grid-td {
+  background-color: #d1d1d1;
 }
 
 /**
