--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Trigger.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/field/Trigger.scss
@@ -1,17 +1,30 @@
 /**
- * @class Ext.form.field.Trigger
- */
+* @class Ext.form.field.Trigger
+*/
 
+/**
+* Style for the main header search field.
+*
+* cls: 'quicksearch'
+*/
 .quicksearch .x-form-trigger-wrap {
   border-radius: 11px;
   padding-left: 3px;
   padding-right: 0px;
-  background-color: white;
+  background-color: #4c4c4c;
+  border-color: #303030;
 
   input.x-form-field,
   .x-trigger-cell,
   .x-form-trigger,
   .x-form-trigger-input-cell {
     background-color: rgba(0, 0, 0, 0);
+  }
+
+  input.x-form-field,
+  .x-trigger-cell,
+  .x-form-trigger,
+  .x-form-text {
+    color: white;
   }
 }
