--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -69,6 +69,16 @@ $grid-feature-menu-selected-background-color: #d1d1d1;
 );
 
 /**
+ * ui: 'masterdetail-tabs'
+ */
+@include extjs-panel-ui(
+  $ui: 'masterdetail-tabs',
+
+  $ui-header-color: #333333,
+  $ui-header-background-color: #f4f4f4
+);
+
+/**
  * ui: 'messages'
  */
 @include extjs-panel-ui(
