--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -12606,12 +12606,12 @@
   padding: 8px 12px 7px 12px;
   border-width: 0 0 0 0;
   border-style: solid;
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 187, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
 .x-tab-sorted-tabpanel-top-mc {
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 234, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
@@ -12754,12 +12754,12 @@
   padding: 8px 12px 7px 12px;
   border-width: 0 0 0 0;
   border-style: solid;
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 187, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
 .x-tab-sorted-tabpanel-bottom-mc {
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 234, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
@@ -12902,12 +12902,12 @@
   padding: 8px 12px 7px 12px;
   border-width: 0 0 0 0;
   border-style: solid;
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 187, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
 .x-tab-sorted-tabpanel-left-mc {
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 234, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
@@ -13050,12 +13050,12 @@
   padding: 8px 12px 7px 12px;
   border-width: 0 0 0 0;
   border-style: solid;
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 187, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
 .x-tab-sorted-tabpanel-right-mc {
-  background-color: #d1d1d1;
+  background-color: white;
 }
 
 /* line 234, ../../../baseapp/ext/packages/ext-theme-base/sass/etc/mixins/frame.scss */
@@ -13210,7 +13210,7 @@
 }
 /* line 344, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-ie8m .x-tab-sorted-tabpanel .x-tab-glyph {
-  color: #e8e8e8;
+  color: white;
 }
 /* line 353, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-strict .x-ie9 .x-tab-bar-vertical .x-tab-sorted-tabpanel {
@@ -13286,11 +13286,7 @@
 
 /* line 487, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-over {
-  background-color: #7f7f7f;
-}
-/* line 496, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
-.x-tab-sorted-tabpanel-over .x-tab-inner {
-  color: white;
+  background-color: #eeeeee;
 }
 /* line 511, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-over .x-tab-glyph {
@@ -13298,12 +13294,12 @@
 }
 /* line 518, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-ie8m .x-tab-sorted-tabpanel-over .x-tab-glyph {
-  color: #bfbfbf;
+  color: #f6f6f6;
 }
 
 /* line 547, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-active {
-  background-color: white;
+  background-color: #d1d1d1;
 }
 /* line 553, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-active .x-tab-inner {
@@ -13315,19 +13311,19 @@
 }
 /* line 575, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-ie8m .x-tab-sorted-tabpanel-active .x-tab-glyph {
-  color: #a1a1a1;
+  color: #8a8a8a;
 }
 
 /* line 583, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-top-active,
 .x-tab-sorted-tabpanel-left-active,
 .x-tab-sorted-tabpanel-right-active {
-  border-bottom: 0 solid white;
+  border-bottom: 0 solid #d1d1d1;
 }
 
 /* line 596, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-bottom-active {
-  border-top: 0 solid white;
+  border-top: 0 solid #d1d1d1;
 }
 
 /* line 609, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
@@ -13407,7 +13403,7 @@
 .x-tab-sorted-tabpanel-top-over .x-frame-mc,
 .x-tab-sorted-tabpanel-left-over .x-frame-mc,
 .x-tab-sorted-tabpanel-right-over .x-frame-mc {
-  background-color: #7f7f7f;
+  background-color: #eeeeee;
 }
 
 /* line 734, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
@@ -13426,7 +13422,7 @@
 }
 /* line 741, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-bottom-over .x-frame-mc {
-  background-color: #7f7f7f;
+  background-color: #eeeeee;
 }
 
 /* line 758, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
@@ -13463,7 +13459,7 @@
 .x-tab-sorted-tabpanel-top-active .x-frame-mc,
 .x-tab-sorted-tabpanel-left-active .x-frame-mc,
 .x-tab-sorted-tabpanel-right-active .x-frame-mc {
-  background-color: white;
+  background-color: #d1d1d1;
 }
 
 /* line 780, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
@@ -13482,7 +13478,7 @@
 }
 /* line 787, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
 .x-tab-sorted-tabpanel-bottom-active .x-frame-mc {
-  background-color: white;
+  background-color: #d1d1d1;
 }
 
 /* line 804, ../../../baseapp/ext/packages/ext-theme-neutral/sass/src/tab/Tab.scss */
@@ -13873,7 +13869,7 @@
 
 /*</if slicer>*/
 /* */
-/* line 20, ../../../baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss */
+/* line 22, ../../../baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss */
 .x-tab-bar-sorted-tabpanel .x-box-inner {
   border-color: #aaaaaa;
   border-width: 0 0 1px 0;
