Uses the tab header background color as a base, builds on that.

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/tab/Panel.scss
@@ -9,9 +9,9 @@
 @include extjs-tab-panel-ui(
   $ui: 'sorted-tabpanel',
 
-  $ui-tab-background-color: #ffffff,
+  $ui-tab-background-color: #f4f4f4,
   $ui-tab-background-color-active: #D1D1D1,
-  $ui-tab-background-color-over: #EEEEEE,
+  $ui-tab-background-color-over: #E4E4E4,
   $ui-strip-background-color: #ffffff,
   $ui-bar-background-color: #f4f4f4,
   $ui-tab-color: #333333,
