--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -75,7 +75,8 @@ $grid-feature-menu-selected-background-color: #d1d1d1;
   $ui: 'masterdetail-tabs',
 
   $ui-header-color: #333333,
-  $ui-header-background-color: #f4f4f4
+  $ui-header-background-color: #f4f4f4,
+  $ui-header-font-size: 16px
 );
 
 /**
